testing/tests/ui/char_literal.stderr
error: the previous template error derives from
 --> tests/ui/char_literal.rs:4:12
  |
4 | #[template(path = "char-literals/char-literal-1.txt")]
  |            ^^^^

error: the previous template error derives from
 --> tests/ui/char_literal.rs:8:12
  |
8 | #[template(path = "char-literals/char-literal-2.txt")]
  |            ^^^^

error: the previous template error derives from
  --> tests/ui/char_literal.rs:12:12
   |
12 | #[template(path = "char-literals/char-literal-3.txt")]
   |            ^^^^

error: the previous template error derives from
  --> tests/ui/char_literal.rs:16:12
   |
16 | #[template(path = "char-literals/char-literal-4.txt")]
   |            ^^^^

error: the previous template error derives from
  --> tests/ui/char_literal.rs:20:12
   |
20 | #[template(path = "char-literals/char-literal-5.txt")]
   |            ^^^^

error: the previous template error derives from
  --> tests/ui/char_literal.rs:24:12
   |
24 | #[template(path = "char-literals/char-literal-6.txt")]
   |            ^^^^

error: the previous template error derives from
  --> tests/ui/char_literal.rs:28:12
   |
28 | #[template(path = "char-literals/char-literal-7.txt")]
   |            ^^^^

error: the previous template error derives from
  --> tests/ui/char_literal.rs:32:12
   |
32 | #[template(source = "{% let s = 'aaa' %}", ext = "html")]
   |            ^^^^^^
